moved submission files

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,4 @@ package-lock.json
 config/database/test.json
 coverage
 .env
-ForumAPIV1_EricPrimaWijaya_REV1.zip
-ForumAPIV1_EricPrimaWijaya.zip
+submission
